# mallaEEDD

./: CMakeLists.txt  Casilla.cpp  Casilla.h  Etiqueta.cpp  Etiqueta.h  ImageBook.cpp  ImageBook.h  Imagen.cpp  Imagen.h  MallaRegular.cpp  MallaRegular.h  UTM.cpp  UTM.h  Usuario.cpp  Usuario.h  etiquetas.txt  fecha.cpp  fecha.h  imagenes_v1.csv  img.cpp  img.h  main.cpp
